src/snapshots/afrotd__parser__tests__interpretation_html_9.1.16_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.16.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Punter A22 befindet sich 15 Meter hinter der neutralen Zone, als er
            den langen Snap fängt. Er sprintet nach rechts in einem Winkel zur
            Scrimmage Line und läuft außerhalb der Tackle Box. Er stoppt dann,
            puntet und (a) wird sofort vom vorwärts hechtenden B89 getroffen
            oder (b) wird sofort vom vorwärts hechtenden B89 getroffen, der
            dabei ein „Targeting“ begeht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Legales Spiel. Kein Foul durch B89. A22 verliert seinen
                Schutz als Kicker, indem er den Ball außerhalb der Tackle Box
                trug (b) Auch wenn sich der Kicker außerhalb der Tackle Box
                befindet, ist Targeting ein persönliches Foul und die Strafe
                wird vom Previous Spot geahndet.
            </p>
        </details>
    </div>
</article>
