src/snapshots/afrotd__parser__tests__interpretation_html_9.1.18_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.18.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B44 fängt an der B-20 einen Pass von A12 und advanct in Richtung
            A’s Endzone. Während B44 advanct, nähert sich B21 in der
            Spielfeldmitte A88 von der ihm abgewandten Seite. B21 blockt A88
            (a) mit ausgestreckten Händen; (b) Körper gegen Körper; (c) indem
            er ihm mit Forcible Contact mit der Schulter in die Brust trifft;
            (d) indem er ihn mit Forcible Contact mit der Schulter gegen den
            Kopf trifft. B44 advanct bis zu der A-20.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) und (b) kein Foul. (c) Persönliches Foul, Blind Side Block,
                15-Meterstrafe vom Punkt des Fouls. (d) Persönliches Foul,
                Blind Side Block mit Targeting, 15-Meterstrafe vom Punkt des
                Fouls. B21 wird disqualifiziert.
            </p>
        </details>
    </div>
</article>
