src/snapshots/afrotd__parser__tests__interpretation_html_9.1.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            A11 wirft einen vollständigen Vorwärtspass auf A88, der einen
            Raumgewinn von 12 Metern erzielt und dann getackelt wird. Während
            des Downs verursacht B88 ein persönliches Foul gegen A79.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die 15-Meterstrafe wird von dem Punkt, an dem A88 getackelt
                wurde, durchgeführt (Regeln 7.3.12 und 9.1 Strafe).
            </p>
        </details>
    </div>
</article>
