src/snapshots/afrotd__parser__tests__interpretation_html_9.1.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Receiver A83 springt in die Luft, um einen Vorwärtspass zu
            erreichen. Als er mit dem Ball landet und im Begriff ist, seine
            Balance zu finden, wird er von B45 berührt, als dieser mit seinem
            Helm oder seiner Schulter voran gegen A83 prallt, der dabei über
            seiner Schulterpartie von B45 getroffen wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul durch B45 für Targeting gegen einen verteidigungslosen
                Spieler und Herbeiführen eines Forcible Contact über dessen
                Schultern. 15 Meter und automatisch First Down, sowie
                automatische Disqualifikation von B45.
            </p>
        </details>
    </div>
</article>
