src/snapshots/afrotd__parser__tests__interpretation_html_9.1.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach dem Kickoff zur zweiten Halbzeit läuft A44 an der B-45. B66
            springt auf A44 zu und trifft ihn von der Seite mit einem Blind
            Side Block. B66 trifft mit dem ersten Kontakt A44’s (a) Hals, (b)
            Oberarm oder Schulter.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Foul von B66 für einen Blind Side Block mit Angriff auf
                einen verteidigungslosen Spieler und die Berührung in dessen
                Kopf- oder Halsbereich. 15-Meterstrafe vom Ende des Laufes. B66
                wird disqualifiziert. (b) Persönliches Foul, Illegaler Blind
                Side Block. Das ist kein Targeting, da der Kontakt von B66
                nicht gegen den Kopf oder Halsbereich gerichtet ist (Regel
                2.27.14).
            </p>
        </details>
    </div>
</article>
