src/snapshots/afrotd__parser__tests__interpretation_html_9.1.4_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.4.V
        </p>
    </div>
    <div class="message-body">
        <p>
            A81 hat sich als Split End weit außen auf der linken Seite der
            Offense Formation aufgestellt. B89 hat sich an seiner Scrimmage
            Line zwischen A81 und dem nächsten an der Scrimmage Line stehenden
            Offense Lineman aufgestellt. B89 konzentriert sich auf den
            Ballträger und hat A81 aus den Augen verloren. A81 läuft nach
            innen, zielt auf B89 und springt in dessen Richtung. Er trifft mit
            seinem Unterarm B89 an dessen Hals.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von A81, Illegaler Blind Side Block mit Targeting. Gemäß
                Regel 9.1.4 ist das eine 15-Meterstrafe, A81 wird
                disqualifiziert. B89 ist verteidigungslos, weil er in diesem
                Fall einen Block von einer Seite erhalten hat, auf die er sich
                nicht konzentriert (Blind Side) (Regel 2.27.14).
            </p>
        </details>
    </div>
</article>
