src/snapshots/afrotd__parser__tests__interpretation_html_9.1.4_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.4.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A33 hat einige Meter Raumgewinn erzielt, als er von zwei
            Defendern ergriffen wird. A33’s Forward Progress wurde gestoppt und
            er wurde zurückgedrängt, aber der Ball wurde noch nicht für dead
            erklärt. Linebacker B55 beugt sich vor und wirft sich vorwärts.
            Dabei rammt er seinen Unterarm gegen die Seite von A33’s Helm.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von B55 für Targeting und Forcible Contact gegen den Kopf
                eines verteidigungslosen Spielers. 15-Meterstrafe. B55 wird
                disqualifiziert. A33 ist ein verteidigungsloser Spieler, da er
                sich im Griff seiner Gegner befindet und sein Forward Progress
                gestoppt wurde (Regel 2.27.14).
            </p>
        </details>
    </div>
</article>
