src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der A-25. Der linke Tackle A77 hat sich innerhalb der
            Tackle Box aufgestellt. Defender B55 hat sich in der Nähe der
            Scrimmage Line und etwas außerhalb von A77 aufgestellt. Beim Snap
            geht A77 zurück, um als Pass-Blocker zu fungieren und B55 stürmt
            gerade auf den im Backfield stehenden QB A12 zu. Während des ersten
            Angriffs an der Scrimmage Line durch B55 blockt A77 B55 unter der
            Gürtellinie und der Block hinter der neutralen Zone ist deutlich
            von der Seite. A77 hat einen Fuß in der Tackle Box, als er den
            Block beginnt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler Block von A77. Diese Aktion wird als Teil des ersten
                Angriffs an der Scrimmage Line gewertet. A77 kann unter der
                Gürtellinie blocken und der Block muss nicht von vorne sein.
                Nach dem ersten Angriff an der Scrimmage Line, und wenn es
                deutlich eine zweite Aktion ist, ist A77 bezüglich tiefen
                Blockens in der Tackle Box eingeschränkt und ein tiefer Block
                muss von vorne erfolgen.
            </p>
        </details>
    </div>
</article>
